src/objects/servicerequest1__c/servicerequest1__c.object-meta.xml
<CustomObject>
    <label>servicerequest1</label>
    <nameField>
        <label>SR Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>servicerequest1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>