src/objects/servicerequest1__c/fields/Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion__c</fullName>
    <label>% Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25%</fullName>
            </value>
            <value>
                <fullName>25-50%</fullName>
            </value>
            <value>
                <fullName>50-75%</fullName>
            </value>
            <value>
                <fullName>75-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>