src/objects/servicerequest1__c/fields/Affected_OEMs__c.field-meta.xml
<CustomField>
    <fullName>Affected_OEMs__c</fullName>
    <label>OEMs affected</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>