src/objects/servicerequest1__c/fields/Date_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_Initiated__c</fullName>
    <label>Created on</label>
    <type>DateTime</type>
</CustomField>