src/objects/servicerequest1__c/fields/Estimated_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_completion_date__c</fullName>
    <label>Estimated completion date</label>
    <type>Date</type>
</CustomField>