src/objects/servicerequest1__c/fields/GCC_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>GCC_Date_Closed__c</fullName>
    <label>GCC Date Closed</label>
    <type>DateTime</type>
</CustomField>