src/objects/servicerequest1__c/fields/Impacted_Regions__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Regions__c</fullName>
    <label>Impacted Regions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>