src/objects/servicerequest1__c/fields/Moved_to_Agenda_Followup__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Agenda_Followup__c</fullName>
    <label>Moved to Agenda Followup</label>
    <type>Date</type>
</CustomField>