src/objects/servicerequest1__c/fields/Moved_to_Top_25__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Top_25__c</fullName>
    <label>Moved to Top 25</label>
    <type>DateTime</type>
</CustomField>