src/objects/servicerequest1__c/fields/One_list_type__c.field-meta.xml
<CustomField>
    <fullName>One_list_type__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOP 25</fullName>
            </value>
            <value>
                <fullName>QUEUE</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>AGENDA FOLLOW UP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>