src/objects/servicerequest1__c/fields/Original_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Commit_Date__c</fullName>
    <label>Original Commit Date</label>
    <type>DateTime</type>
</CustomField>