src/objects/servicerequest1__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <label>Problem Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>