src/objects/servicerequest1__c/fields/RAIL_Description__c.field-meta.xml
<CustomField>
    <fullName>RAIL_Description__c</fullName>
    <label>RAIL Description</label>
    <type>TextArea</type>
</CustomField>