src/objects/servicerequest1__c/fields/RAIL_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>RAIL_Item_Number__c</fullName>
    <label>RAIL/Item Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>