src/objects/servicerequest1__c/fields/RAIL_Owner__c.field-meta.xml
<CustomField>
    <fullName>RAIL_Owner__c</fullName>
    <label>RAIL Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>