src/objects/servicerequest1__c/fields/RAIL_type__c.field-meta.xml
<CustomField>
    <fullName>RAIL_type__c</fullName>
    <label>RAIL type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>