src/objects/servicerequest1__c/fields/Region_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Region_of_Origin__c</fullName>
    <label>Region of Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>