src/objects/servicerequest1__c/fields/Status_dates__c.field-meta.xml
<CustomField>
    <fullName>Status_dates__c</fullName>
    <label>Status &amp; dates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>