src/objects/servicerequest1__c/fields/Supported_Products__c.field-meta.xml
<CustomField>
    <fullName>Supported_Products__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>