src/objects/servicerequest1__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>